# Checkersv

./: CMakeLists.txt  main.cpp  pawn.hpp
